Changelog for Yii User Management Module (Yum) 

New in 0.8:
- Added Documentation about the new, experimental Permission system
- Added ignore users to privacy settings
- Introduced YumMailer (bigchirv)
- reworked messaging System (thyseus)
- Added User privacy settings (thyseus)
- Added Usergroup submodule (thyseus)
- New User activity logging subsystem (see YumActivityController) - logging of login, logout, wrong password attempt, recovery and registration into database and Yii log file
- Added avatar upload possibility for users
- Added 'visitors' to profiles (who visited whom when, and display it)
- Added support for send emails out of SwiftMailer (docs/swiftMailer.txt)
- Added DROPDOWNLIST field type to profile fields. see docs/dropdownlist_in_registration_form.txt for information on how to use this (thyseus)
- Added possibility to make roles selectable on registration (thyseus)
- Added user Generator (available under 'other' when debug mode is enabled)
- New default URL route '<app>/user/login' instead of less beautiful '<app>/user/user/login' (thyseus)
- Refactored Registration Process into YumRegistrationController (makes YumUserController less fussy) (thyseus)
- Removed AllowInactiveAccountLogin (don't needed anymore because of the new registration Options) (thyseus)
- Possibility to show administration hierarchy by HierarchyController (thyseus)
- Prepared ROLE_has_ROLE to determine what users of which role can administrate user that have which Role (thyseus)
- Added User Statistics (thyseus)
- Removed adminpanel (thyseus)
- added password expiration date (experimental) (thyseus)
- added new Relation widget that fixed MANY_MANY DropDownList problems (thyseus)
- Wrapped Yum::t() around Yii::t() to allow easier translations (thyseus)
- Renamed YumHelper to Yum (thyseus)
- changed menu Navigation to one big, hierarchical menu displayed as a treeview (thyseus)
- added yumSettings and yumTextSettings (thyseus) 